# picosys-mandelbrot

./: CMakeLists.txt
src/: picosys_mandelbrot.cpp
